Bug 234563 - [GTK][a11y] Test accessibility/svg-remote-element.html crashes with ATSPI
Summary: [GTK][a11y] Test accessibility/svg-remote-element.html crashes with ATSPI
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKitGTK (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: Gtk, LayoutTestFailure
Depends on:
Blocks: ATSPI
  Show dependency treegraph
 
Reported: 2021-12-21 07:16 PST by Carlos Garcia Campos
Modified: 2021-12-28 23:37 PST (History)
11 users (show)

See Also:


Attachments
Patch (1.68 KB, patch)
2021-12-21 07:23 PST, Carlos Garcia Campos
aperez: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Carlos Garcia Campos 2021-12-21 07:16:44 PST
This is because the remote svg element wrappers can't be created because the svg image page hasn't the root object set.
Comment 1 Carlos Garcia Campos 2021-12-21 07:23:44 PST
Created attachment 447715 [details]
Patch
Comment 2 Carlos Garcia Campos 2021-12-23 00:54:47 PST
Committed r287388 (245528@trunk): <https://commits.webkit.org/245528@trunk>