[GTK][a11y] Test accessibility/svg-remote-element.html crashes with ATSPI https://bugs.webkit.org/show_bug.cgi?id=234563

Reviewed by Adrian Perez de Castro.

This is because the remote svg element wrappers can't be created because the svg image page hasn't the root
object set.

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::remoteSVGRootElement const): Set the root image wrapper element on the svg
image page.


Canonical link: https://commits.webkit.org/245528@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287388 268f45cc-cd09-0410-ab3c-d52691b4dbfc